# inbound-core

./: .coveragerc  .gitignore  Makefile  pyproject.toml  requirements.txt
.github/workflows/: check_on_push.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
data/: csv_duckdb.yml  csv_duckdb_gcs.yml  csv_duckdb_metadata.yml  csv_duckdb_sqlite.yml  csv_duckdb_sqlite_csv.yml  csv_duckdb_transformer.yml  dbc_project.yml  fylker.yml  jobs.yml  loading.yml  locations.csv  source_excel.xlsx  source_processed.csv  test_excel.xlsx  transformer.py
data/dbt/: profiles.yml
data/lineage/: graph.json  lineage.json
data/profiles/snowflake_user_password/: profiles.yml
docs/images/: dataproduct_ops.drawio
examples/notebook/: csv_duckdb.yml  csv_transform_duckdb.yml  getting_started_json.ipynb  getting_started_yaml.ipynb  log_format.ipynb  snowflake_row_level_security.html  snowflake_row_level_security.ipynb  states.csv  test_out_short.csv  test_pandas.ipynb  transformer.py
inbound/: __main__.py  inbound_project.yml
inbound/artifacts/dbt/: graph.py  manifest.py
inbound/artifacts/soda/: results.py
inbound/artifacts/soda/models/: results_model.py
inbound/client/: cli.py
inbound/core/: __init__.py  connection_loader.py  dbt_profile.py  environment.py  job_factory.py  job_result.py  jobs.py  jobs_result.py  logging.py  metadata.py  models.py  profiler.py  settings.py  soda_profile.py  transformer.py  utils.py
inbound/framework/: cli.py
inbound/plugins/connections/: bigquery.py  connection.py  duckdb.py  file.py  gcs.py  jobs.py  oracle.py  postgres.py  snowflake.py  sqlalchemy.py
inbound/plugins/services/: oracle_to_snowflake.py
tests/e2e/: conftest.py  docker-compose.yml  test_hello.py  test_metadata.py
tests/e2e/bigquery/: test_bigquery_connector.py
tests/e2e/containers/hello/: Dockerfile  main.py
tests/e2e/containers/oracle/: Dockerfile
tests/e2e/fastrack/: test_postgres_copy.py
tests/e2e/gcs/: test_gcs.py
tests/e2e/metadata/: test_metadata.py
tests/e2e/oracle/: test_oracle.py
tests/e2e/postgres/: test.csv  test_postgres.py
tests/e2e/snowflake/: profiles.yml  test_snowflake_from_duckdb.py  test_snowflake_profiles.py  test_snowflake_sqlalchemy.py
tests/e2e/sync/: test_oracle_to_snowflake.py
tests/unit/: __init__.py  conftest.py  test_all_jobs.py  test_cli.py  test_core.py  test_csv.py  test_csv_to_duckdb.py  test_csv_to_duckdb_to_sqlite_to_csv.py  test_csv_to_sqlite.py  test_dbt_artifacts.py  test_dbt_profile.py  test_duckdb.py  test_excel.py  test_file.py  test_job_id  test_jobs_file_parser.py  test_lineage.py  test_logging.py  test_models.py  test_secrets.py  test_settings.py  test_soda_profile.py  test_sqlalchemy.py  test_transform.py
