[tool.poetry]
name = "inbound-core"
version = "0.0.1"
description = ""
authors = ["Virksomhetsdatalaget"]
readme = "README.md"
packages = [{include = "inbound"}]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.8.1,<3.11"
pandas = "^1.5.3"
jupyter = "1.0.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | \.env
  | build
  | dist
  | \.mypy_cache
  | tests/data
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["src", "tests"]
default_section = "THIRDPARTY"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 100
show_missing = true
omit = []
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry.scripts]
inbound = 'inbound.client.cli:inbound'